--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport"
         content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
-    <title>这里是网站标题</title>
+    <title>Xlencoの个人主页</title>
     <meta name="description"
-        content="这里是网站介绍">
-    <meta name="keywords" content="这里是网站关键词">
+        content="Xlencoの个人主页">
+    <meta name="keywords" content="xlenco">
     <link rel="stylesheet" type="text/css" href="./css/FiraCode.css">
     <link rel="stylesheet" type="text/css" href="./css/nutssss.css">
-    <link rel="icon" href="./favicon.ico">
+    <link rel="icon" href="https://q1.qlogo.cn/g?b=qq&nk=1043865083&s=5">
 </head>
 
 <body>
@@ -22,12 +22,12 @@
             <div class="headPhoto"></div>
             <!-- 介绍 -->
             <div class="meBox-title">
-                <p>I'm N0ts</p>
+                <p>I'm Xlenco</p>
                 <div class="fg"></div>
             </div>
             <div class="meBox-text">
                 <p>一条咸鱼<img src="./img/fish.png" alt="咸鱼" style="width: 20px; vertical-align: middle;"></p>
-                <p>爱好篮球，计算机</p>
+                <p>爱好二次元，计算机</p>
                 <p>瞎折腾浪费时间最在行</p>
                 <p>最爱<img src="./img/002.png" alt="冰激凌" style="width: 15px; vertical-align: middle;"></p>
             </div>
@@ -111,8 +111,7 @@
 
     <!-- 页脚 -->
     <div id="footer">
-        <p>© 2020 NUTSSSS | <a href="http://beian.miit.gov.cn">湘ICP备18015792号</a></p>
-        <p>THEME MADE BY <a href="https://nutssss.cn/">Nutssss</a></p>
+        <p>© 2023 Xlenco</a></p>
     </div>
 </body>
 
