--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <!-- 两个按钮 -->
             <div class="meBox-Button">
-                <a href="#">关于</a>
+                <a href="">关于</a>
                 <a href="#">联系</a>
             </div>
         </div>
@@ -77,6 +77,7 @@
                     <span style="color: rgb(39, 39, 39);">sudo rm -rf /过去的自己/*</span>
                 </div>
             </div>
+        <div id="cmdBox2">
             <!-- 第二个终端 -->
             <div class="cmd cmd2">
                 <!-- 三个按钮 -->
