--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             </div>
             <!-- 两个按钮 -->
             <div class="meBox-Button">
-                <a href="">关于</a>
-                <a href="#">联系</a>
+                <a href="#cmdBox">关于</a>
+                <a href="#cmdBox2">联系</a>
             </div>
         </div>
 
