--- a/index.html
+++ b/index.html
@@ -97,11 +97,8 @@
                     <span style="color: rgb(39, 39, 39);">./links.sh</span>
                     <p>我的其他站点：</p>
                     <ul class="ul">
-                        <li><a href="https://blog.nutssss.cn/">Blog</a></li>
-                        <li><a href="https://lovexhj.cn/">Love</a></li>
-                        <li><a href="https://note.nutssss.cn/">Note</a></li>
-                        <li><a href="https://mc.nutssss.cn/">Mc</a></li>
-                        <li><a href="https://mc.nutssss.cn/blog/">McBlog</a></li>
+                        <li><a href="https://blog.xlenco.top/">Blog</a></li>
+                        <li><a href="https://alist.xlenco.top/">Alist</a></li>
                     </ul>
                     <span style="color: rgb(0, 190, 0);">root@nutssss</span>
                     <span style="color: blue;">~</span>
