--- a/index.html
+++ b/index.html
@@ -102,6 +102,12 @@
                     </ul>
                     <span style="color: rgb(0, 190, 0);">root@nutssss</span>
                     <span style="color: blue;">~</span>
+                    <span style="color: rgb(39, 39, 39);">./about.sh</span>
+                    <p>联系我：</p>
+                    <ul class="ul">
+                        <li><a href="https://qm.qq.com/cgi-bin/qm/qr?k=eHT6b6llnxiiT4IjuaBXvselTBWRK7-b&noverify=0">QQ</a></li>
+                        <li><a href="mailto:1043865083@qq.com">Email</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
