--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" type="text/css" href="./css/FiraCode.css">
     <link rel="stylesheet" type="text/css" href="./css/nutssss.css">
     <link rel="icon" href="https://q1.qlogo.cn/g?b=qq&nk=1043865083&s=5">
+    <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+    <script>LA.init({id:"JwrIw3gzpFNhwcbK",ck:"JwrIw3gzpFNhwcbK"})</script>
 </head>
 
 <body>
