--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <ul class="ul">
                         <li><a href="https://blog.xlenco.top/">Blog</a></li>
                         <li><a href="https://alist.xlenco.top/">Alist</a></li>
-                        <li><a href="https://alist.xlenco.top/">Alist</a></li>
+                        <li><a href="https://uptime.xlenco.top/status/admin">监控云台</a></li>
                     </ul>
                     <span style="color: rgb(0, 190, 0);">root@nutssss</span>
                     <span style="color: blue;">~</span>
