--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                     <ul class="ul">
                         <li><a href="https://qm.qq.com/cgi-bin/qm/qr?k=eHT6b6llnxiiT4IjuaBXvselTBWRK7-b&noverify=0">QQ</a></li>
                         <li><a href="mailto:1043865083@qq.com">Email</a></li>
+                        <li><a href="https://afdian.net/a/xlenco">爱发电</a></li>
                     </ul>
                 </div>
             </div>
