--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                     <span style="color: blue;">~</span>
                     <span style="color: rgb(39, 39, 39);">cat /me.txt</span>
                     <p>爱好计算机，会去自学自己感兴趣的一切东西</p>
-                    <p>略懂H5，C#开发；爱好折腾去解决一切问题</p>
-                    <p>同时我也很喜欢玩硬件，raspberry是我的最爱</p>
+                    <p>略懂H5；爱好折腾，解决一切难题</p>
+                    <p>又菜又爱玩</p>
                     <p>这条路我才刚刚迈开了我的第一步</p>
                     <p>路上的坎一定会非常多，但</p>
                     <p>在我眼里</p>
