--- a/index.html
+++ b/index.html
@@ -52,18 +52,18 @@
                 </div>
                 <!-- 顶部标题 -->
                 <div class="title">
-                    <span>lovexhj - bash</span>
+                    <span>lovexle - bash</span>
                 </div>
                 <!-- 终端内文字 -->
                 <div class="cmdText">
-                    <span style="color: rgb(0, 190, 0);">root@nutssss</span>
+                    <span style="color: rgb(0, 190, 0);">root@xlenco</span>
                     <span style="color: blue;">~</span>
                     <span style="color: rgb(39, 39, 39);">./tianqi.sh</span>
                     <br />
                     <iframe scrolling="no" src="https://tianqiapi.com/api.php?style=tb&skin=pitaya" frameborder="0"
                         width="350" height="24" allowtransparency="true"></iframe>
                     <br />
-                    <span style="color: rgb(0, 190, 0);">root@nutssss</span>
+                    <span style="color: rgb(0, 190, 0);">root@xlenco</span>
                     <span style="color: blue;">~</span>
                     <span style="color: rgb(39, 39, 39);">cat /me.txt</span>
                     <p>爱好计算机，会去自学自己感兴趣的一切东西</p>
@@ -87,11 +87,11 @@
                 </div>
                 <!-- 顶部标题 -->
                 <div class="title">
-                    <span>lovexhj - bash</span>
+                    <span>lovexle - bash</span>
                 </div>
                 <!-- 终端内文字 -->
                 <div class="cmdText">
-                    <span style="color: rgb(0, 190, 0);">root@nutssss</span>
+                    <span style="color: rgb(0, 190, 0);">root@xlenco</span>
                     <span style="color: blue;">~</span>
                     <span style="color: rgb(39, 39, 39);">./links.sh</span>
                     <p>我的其他站点：</p>
@@ -100,7 +100,7 @@
                         <li><a href="https://alist.xlenco.top/">Alist</a></li>
                         <li><a href="https://uptime.xlenco.top/status/admin">监控云台</a></li>
                     </ul>
-                    <span style="color: rgb(0, 190, 0);">root@nutssss</span>
+                    <span style="color: rgb(0, 190, 0);">root@xlenco</span>
                     <span style="color: blue;">~</span>
                     <span style="color: rgb(39, 39, 39);">./about.sh</span>
                     <p>联系我：</p>
