--- a/index.html
+++ b/index.html
@@ -1,123 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="zh-CN">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="Access-Control-Allow-Origin" content="*" />
+    <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="%VITE_SITE_LOGO%" />
+    <link rel="apple-touch-icon" href="%VITE_SITE_APPLE_LOGO%" />
+    <link rel="bookmark" href="%VITE_SITE_APPLE_LOGO%" />
+    <link rel="apple-touch-icon-precomposed" sizes="200x200" href="%VITE_SITE_APPLE_LOGO%" />
+    <meta name="description" content="%VITE_SITE_DES%" />
+    <meta name="keywords" content="%VITE_SITE_KEYWORDS%" />
+    <meta name="author" content="%VITE_SITE_ANTHOR%" />
+    <meta name="theme-color" content="#424242" />
+    <title>%VITE_SITE_NAME%</title>
+    <!-- HarmonyOS Sans -->
+    <!-- 本站 CDN 已开启防盗链，非本站域名不可访问，请更改链接为下方内容，否则自定义字体将失效 -->
+    <link rel="stylesheet" href="https://s1.hdslb.com/bfs/static/jinkela/long/font/regular.css" />
+    <!-- <link rel="stylesheet" href="https://cdn.imsyy.top/gh/imsyy/file/font/HarmonyOS_Sans/regular.min.css" /> -->
+    <!-- IE Out -->
+    <script>
+      if (/*@cc_on!@*/ false || (!!window.MSInputMethodContext && !!document.documentMode))
+        window.location.href =
+          'https://support.dmeng.net/upgrade-your-browser.html?referrer=' +
+          encodeURIComponent(window.location.href);
+    </script>
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-        content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
-    <title>Xlencoの个人主页</title>
-    <meta name="description"
-        content="Xlencoの个人主页">
-    <meta name="keywords" content="xlenco">
-    <link rel="stylesheet" type="text/css" href="./css/FiraCode.css">
-    <link rel="stylesheet" type="text/css" href="./css/nutssss.css">
-    <link rel="icon" href="https://q1.qlogo.cn/g?b=qq&nk=1043865083&s=5">
-    <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
-    <script>LA.init({id:"JwrIw3gzpFNhwcbK",ck:"JwrIw3gzpFNhwcbK"})</script>
-</head>
-
-<body>
-    <div id="box">
-        <!-- 个人资料卡片 -->
-        <div class="meBox">
-            <!-- 头像 -->
-            <div class="headPhoto"></div>
-            <!-- 介绍 -->
-            <div class="meBox-title">
-                <p>I'm Xlenco</p>
-                <div class="fg"></div>
-            </div>
-            <div class="meBox-text">
-                <p>一条咸鱼<img src="./img/fish.png" alt="咸鱼" style="width: 20px; vertical-align: middle;"></p>
-                <p>爱好二次元，计算机</p>
-                <p>瞎折腾浪费时间最在行</p>
-                <p>最爱<img src="./img/002.png" alt="冰激凌" style="width: 15px; vertical-align: middle;"></p>
-            </div>
-            <!-- 两个按钮 -->
-            <div class="meBox-Button">
-                <a href="#cmdBox">关于</a>
-                <a href="#cmdBox2">联系</a>
-            </div>
-        </div>
-
-        <!-- 伪终端介绍 -->
-        <div id="cmdBox">
-            <!-- 第一个终端 -->
-            <div class="cmd">
-                <!-- 三个按钮 -->
-                <div class="click">
-                    <div class="red"></div>
-                    <div class="yellow"></div>
-                    <div class="green"></div>
-                </div>
-                <!-- 顶部标题 -->
-                <div class="title">
-                    <span>lovexle - bash</span>
-                </div>
-                <!-- 终端内文字 -->
-                <div class="cmdText">
-                    <span style="color: rgb(0, 190, 0);">root@xlenco</span>
-                    <span style="color: blue;">~</span>
-                    <span style="color: rgb(39, 39, 39);">./tianqi.sh</span>
-                    <br />
-                    <iframe scrolling="no" src="https://tianqiapi.com/api.php?style=tb&skin=pitaya" frameborder="0"
-                        width="350" height="24" allowtransparency="true"></iframe>
-                    <br />
-                    <span style="color: rgb(0, 190, 0);">root@xlenco</span>
-                    <span style="color: blue;">~</span>
-                    <span style="color: rgb(39, 39, 39);">cat /me.txt</span>
-                    <p>爱好计算机，会去自学自己感兴趣的一切东西</p>
-                    <p>略懂H5，正在学习Python；爱好折腾，解决一切难题</p>
-                    <p>又菜又爱玩</p>
-                    <p>这条路我才刚刚迈开了我的第一步</p>
-                    <p>路上的坎一定会非常多，但</p>
-                    <p>在我眼里</p>
-                    <p>没有什么问题是尝试不能解决的，如果有那就多尝试几次甚至上百次</p>
-                    <p>即使前方的路看似绝境，也要有硬生生给自己开出一条路的勇气</p>
-                </div>
-            </div>
-        <div id="cmdBox2">
-            <!-- 第二个终端 -->
-            <div class="cmd cmd2">
-                <!-- 三个按钮 -->
-                <div class="click">
-                    <div class="red"></div>
-                    <div class="yellow"></div>
-                    <div class="green"></div>
-                </div>
-                <!-- 顶部标题 -->
-                <div class="title">
-                    <span>lovexle - bash</span>
-                </div>
-                <!-- 终端内文字 -->
-                <div class="cmdText">
-                    <span style="color: rgb(0, 190, 0);">root@xlenco</span>
-                    <span style="color: blue;">~</span>
-                    <span style="color: rgb(39, 39, 39);">./links.sh</span>
-                    <p>我的其他站点：</p>
-                    <ul class="ul">
-                        <li><a href="https://blog.xlenco.top/">Blog</a></li>
-                     <!--   <li><a href="https://alist.xlenco.top/">Alist</a></li> -->
-                        <li><a href="https://uptime.xlenco.top/status/admin">监控云台</a></li>
-                    </ul>
-                    <span style="color: rgb(0, 190, 0);">root@xlenco</span>
-                    <span style="color: blue;">~</span>
-                    <span style="color: rgb(39, 39, 39);">./about.sh</span>
-                    <p>联系我：</p>
-                    <ul class="ul">
-                        <li><a href="https://qm.qq.com/cgi-bin/qm/qr?k=eHT6b6llnxiiT4IjuaBXvselTBWRK7-b&noverify=0">QQ</a></li>
-                        <li><a href="mailto:1043865083@qq.com">Email</a></li>
-                        <li><a href="https://afdian.net/a/xlenco">爱发电</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- 页脚 -->
-    <div id="footer">
-        <p>© 2023 Xlenco</a></p>
-    </div>
-</body>
-
+  <body>
+    <!-- 主体内容 -->
+    <div id="app"></div>
+    <!-- noscript -->
+    <noscript>
+      <div style="text-align: center">请开启 JavaScript</div>
+    </noscript>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
